labs/Lab1/vitis_better/conv_op_ip/axil_conv2D/logs/hls_run_csim_14433.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/axil_conv2D/axil_conv2D.hlsrun_csim_summary, at Tue May 20 14:47:48 2025
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/axil_conv2D -config /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg -cmdlineconfig /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/axil_conv2D/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2024.1.2 (64-bit)
  **** SW Build 5096458 on Sep  5 2024
  **** IP Build 5164407 on Fri Sep  6 08:18:11 MDT 2024
  **** SharedData Build 5164864 on Thu Sep 05 13:09:09 MDT 2024
  **** Start of session at: Tue May 20 14:47:57 2025
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2024 Advanced Micro Devices, Inc. All Rights Reserved.

source /home/ares/tools/Xilinx/Vitis_HLS/2024.1/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] For user 'ares' on host 'ares' (Linux_x86_64 version 5.15.0-139-generic) on Tue May 20 14:48:05 WEST 2025
INFO: [HLS 200-10] On os Linux Mint 21.2
INFO: [HLS 200-10] In directory '/home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip'
INFO: [HLS 200-2005] Using work_dir /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/axil_conv2D 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/axil_conv2D.cpp' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/axil_conv2D.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/axil_conv2D.h' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/axil_conv2D.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/tb_axil_conv2D.cpp' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file '/home/ares/Desktop/CO-Proj/Labs/Lab1/lab1_files/hls/tb_axil_conv2D.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=axil_conv2D' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z010clg400-1' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z010-clg400-1'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(11)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=27%' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(12)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2.7ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /home/ares/Desktop/CO-Proj/Labs/Lab1/vitis_better/conv_op_ip/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../../lab1_files/hls/tb_axil_conv2D.cpp in debug mode
   Compiling ../../../../../../lab1_files/hls/axil_conv2D.cpp in debug mode
../../../../../../lab1_files/hls/axil_conv2D.cpp:48:37: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_red = acc_red > 255 ? 255 : acc_red;
                                    ^ ~~~   ~~~~~~~
../../../../../../lab1_files/hls/axil_conv2D.cpp:49:35: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_red = acc_red < 0 ? 0 : acc_red;
                                  ^ ~   ~~~~~~~
../../../../../../lab1_files/hls/axil_conv2D.cpp:50:41: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_green = acc_green > 255 ? 255 : acc_green;
                                        ^ ~~~   ~~~~~~~~~
../../../../../../lab1_files/hls/axil_conv2D.cpp:51:39: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_green = acc_green < 0 ? 0 : acc_green;
                                      ^ ~   ~~~~~~~~~
../../../../../../lab1_files/hls/axil_conv2D.cpp:52:39: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_blue = acc_blue > 255 ? 255 : acc_blue;
                                      ^ ~~~   ~~~~~~~~
../../../../../../lab1_files/hls/axil_conv2D.cpp:53:37: error: conditional expression is ambiguous; 'int' can be converted to 'accum_t' (aka 'ap_int<21>') and vice versa
            acc_blue = acc_blue < 0 ? 0 : acc_blue;
                                    ^ ~   ~~~~~~~~
6 errors generated.
make: *** [csim.mk:93: obj/axil_conv2D.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 10.89 seconds. Total CPU system time: 1.16 seconds. Total elapsed time: 28.16 seconds; peak allocated memory: 257.438 MB.
